Fix jump bug for swipe when swiping short, make dots move to relative position

--- a/style.css
+++ b/style.css
@@ -64,16 +64,6 @@ body {
 	
 }
 
-/*.c-slider::after {
-	position: absolute;
-	content: '';
-	top: 0;
-	right: 0;
-	left: 0;
-	bottom: 0;
-	border: 4px solid red;
-}*/
-
 
 	.c-slider__container {
 		-ms-touch-action: pan-y;
